# KhIT_project

./: main.py  pyproject.toml
migrations/versions/: 043183fa5edd_init.py
src/: schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py
src/routes/: contacts.py
